ghc-4335c07/testsuite/tests/rename/should_compile/T7167.hs
{-# OPTIONS_GHC -fwarn-dodgy-imports #-}

module T7167 where

import Data.List hiding (foo)
