ghc-4335c07/testsuite/tests/rename/should_fail/T7454.hs
{-# OPTIONS_GHC -fwarn-unused-imports #-}

module T7454 where

import Control.Arrow( Arrow, arr )

foo () = arr
